Style updates to fix overflow on woodland supply, preserve size of cheveron image

--- a/src/app/work-experience/img-convert/img-convert.component.css
+++ b/src/app/work-experience/img-convert/img-convert.component.css
@@ -18,6 +18,7 @@ h6{
 svg{
     padding-right:5px;
     padding-left:5px;
+    min-width: 50px;
     align-self: flex-end;
 }
 div{
