--- a/src/app/work-experience/woodland-supply/woodland-supply.component.css
+++ b/src/app/work-experience/woodland-supply/woodland-supply.component.css
@@ -7,7 +7,6 @@ p{
 h3{
     margin: auto;
     margin-left:0;
-    line-height: 50px;
     display: inline;
 }
 h6{
@@ -19,6 +18,7 @@ h6{
 svg{
     padding-right:5px;
     padding-left:5px;
+    min-width: 50px;
     align-self: flex-end;
 }
 div{
